# NEXUS-CV

./: .env.example  .gitignore  ADR.md  ARCHITECTURE.md  BENCHMARKS.md  PHASE_REPORT.md  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements-dev.txt  requirements.txt
config/: __init__.py  settings.py
dashboard/: __init__.py
docker/: Dockerfile.ingestion  Dockerfile.serving  prometheus.yml
docs/: api_reference.md  architecture.md  business_case.md  deployment.md  quickstart.md
fusion/: __init__.py  calibration.py  data_types.py  fusion_actor.py  kalman_tracker.py  lidar_simulator.py  radar_simulator.py  sensor_alignment.py
infra/: prometheus.yml
ingestion/: __init__.py  __main__.py  app.py  frame_buffer_actor.py  metrics.py  schema_contracts.py  stream_capture.py  yolo_detector.py
intelligence/: __init__.py  anomaly_scorer.py  data_types.py  ensemble.py  model_utils.py  scene_classifier.py  trajectory_lstm.py
mlops/: __init__.py  data_versioning.py  drift_monitor.py  drift_workflow.py  experiment_tracker.py  mlflow_utils.py  model_registry.py  retraining_orchestrator.py
notebooks/: 01_trajectory_lstm_training.ipynb
proto/: __init__.py  nexus_cv.proto  nexus_cv_pb2.py  nexus_cv_pb2_grpc.py
reports/: drift_20260607_190023.html  drift_20260607_190730.html
scripts/: generate_synthetic_streams.py  load_test.py  promote_model.py  run_drift_report.py  run_ingestion.py  run_serving.py  visualize_tracks.py
serving/: __init__.py  converters.py  deployments.py  gateway.py  grpc_codec.py  grpc_server.py  health.py  metrics.py  middleware.py  (+4 more)
(+57 files in other folders)
